Fix text not centered

--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -54,12 +54,18 @@
   border-radius: 10px;
 }
 
-
 .sidebar .side-content {
   background-color: white;
   color: black;
   font-size: 16px;
   font-weight: normal;
+}
+
+.side-content,
+.photo {
+  display: grid;
+  justify-items: center;
+  align-content: center;
 }
 
 .side-content .photo {
